ui: Prevent zooming when quickly pressing the increment buttons on mobile

--- a/scouting/static/main/styles.css
+++ b/scouting/static/main/styles.css
@@ -1219,6 +1219,10 @@ select {
   cursor: pointer;
 }
 
+.touch-manipulation {
+  touch-action: manipulation;
+}
+
 .snap-y {
   scroll-snap-type: y var(--tw-scroll-snap-strictness);
 }
